# APZ-Tool

./: APZ-Tool.spec  README.md  apz_core.py  apz_gui.py  apz_pdf_parser.py  pyinstaller.py  pyproject.toml  requirements.txt  script.iss  spz_gui.py
