[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apz-tool"
version = "1.0.0"
dependencies = [
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "pdfplumber==0.11.8",
    "PySide6==6.7.0"
]
licenses = {text = "MIT"}  # Deine Lizenz für das Tool